--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
       <div class="button">
         <a href="mailto:fenin2002@gmail?subject=Message%20Subject&body=Message%20Body"><button>Let's Chat</button></a>
         <div>
-          <p><strong>Name:</strong> FENIN B S</p>
-          <p><strong>Email:</strong> <a href="mailto:fenin2002@gmail.com">fenin2002@gmail.com</a></p>
-          <p><strong>Phone:</strong> <a href="tel:+919442473277">+91 9442473277</a></p>
-          <p><strong>Address:</strong> Thattanvilagam, Arumanai, Tamil Nadu, 629151</p>
+          <p><strong>Name:</strong> Manikandan S</p>
+          <p><strong>Email:</strong> <a href="mailto:fenin2002@gmail.com">maikandan204180@gmail.com</a></p>
+          <p><strong>Phone:</strong> <a href="tel:+919442473277">+91 8270753561</a></p>
+          <p><strong>Address:</strong> East Street,Peruvakkottai,Ramanathapuram,Tamilnadu,.623308</p>
         </div>
       </div>
     </div>
