--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
    <div class="home-content">
      <div class="text">
        <div class="text-one">Hello,</div>
-       <div class="text-two">I'm Fenin</div>
-       <div class="text-three">Electronics And Communication Engineer</div>
+       <div class="text-two">I'm Manikandan</div>
+       <div class="text-three">PLC ENGINEER</div>
        <div class="text-four">From TamilNadu</div>
      </div>
      <div class="button">
-       <a href="https://www.linkedin.com/in/fenin/"><button>Hire Me</button></a>
+       <a href="https://www.linkedin.com/in/fenin/"><button>Contact Me</button></a>
      </div>
    </div>
  </section>
@@ -63,9 +63,9 @@
     </div>
     <div class="right">
       <div class="topic">OBJECTIVE</div>
-      <p>I am a passionate Electronics and Communication Engineering (ECE) graduate with a strong foundation in both hardware and software domains. My expertise lies in web development, data analysis, and automation, particularly in building scalable solutions like web scrapers integrated with SQL databases. I am driven by a love for problem-solving and continuously seek to learn and innovate. With hands-on experience in various projects, including web scraping and data management, I am eager to contribute my skills to impactful and challenging roles. Currently, I am looking for opportunities that allow me to grow professionally and make a meaningful difference in the tech industry.</p>
+      <p>A highly motivated and results-driven PLC Engineer with 2.5 years of experience in designing, programming, and maintaining automated systems across diverse industries. Skilled in troubleshooting and optimizing PLC-based control systems, with proficiency in ladder logic,and various PLC hardware and software. Seeking to leverage my expertise in automation and control systems to contribute to the continuous improvement of industrial processes while enhancing operational efficiency in a dynamic and growth-oriented environment</p>
       <div class="button">
-        <a href="Resume/Fenin B S.pdf" download><button>Download CV</button></a>
+        <a href="Resume/Fenin B S.pdf" download><button>Download Resume</button></a>
       </div>
     </div>
   </div>
