--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
          <div class="icon">
            <i class="fas fa-desktop"></i>
        </div>
-       <div class="topic">Web Devlopment</div>
-       <p>Developed and designed a personal portfolio website 
-       <a></a>https://feninflash.github.io/My-portfolio/</a></p>
+       <div class="topic">BEL- Stewart Platform </div>
+       <p>6 Degrees of Freedom, Inverse Kinematics Implementation, Real-Time Motion Control 
+      </p>
      </div>
        <div class="box">
          <div class="icon">
