--- a/index.html
+++ b/index.html
@@ -129,12 +129,8 @@
          <div class="icon">
            <i class="fas fa-paint-brush"></i>
        </div>
-       <div class="topic">Java-based Web Scraper</div>
-       <p> Designed and implemented a scalable web scraping framework using Java
- Utilized Selenium WebDriver for rendering JavaScript-heavy web pages
- Implemented SQL database integration for data storage and management
- Developed efficient data parsing and storage algorithms
- Handled anti-scraping measures and exceptions</p>
+       <div class="topic">TENNECO FANUC CNC SYSTEM</div>
+       <p>FANUC CNC Controller Integration-Code & M-Code Programming, Simulation & Testing</p>
      </div>
        <!--<div class="box">
          <div class="icon">
