--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
        <div class="topic">TENNECO FANUC CNC SYSTEM</div>
        <p>FANUC CNC Controller Integration-Code & M-Code Programming, Simulation & Testing</p>
      </div>
-       <!--<div class="box">
+       <div class="box">
          <div class="icon">
            <i class="fas fa-chart-line"></i>
        </div>
@@ -161,7 +161,7 @@
        <p>Coming soon</p>
      </div>
    </div>
-   </div>-->
+   </div>
  </section>
 
 <!-- Contact Me section Start -->
