--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
          <div class="icon">
            <i class="fas fa-chart-line"></i>
        </div>
-       <div class="topic">Digital Marketing</div>
-       <p>Coming soon</p>
+       <div class="topic">LUCAS-TVS Starter Torque Control Testing Machine
+</div>
+       <p>Precision torque control, real-time data monitoring, robust testing protocols.</p>
      </div>
        <div class="box">
          <div class="icon">
