--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
          <div class="icon">
            <i class="fas fa-paint-brush"></i>
        </div>
-       <div class="topic">TENNECO FANUC CNC SYSTEM</div>
+       <div class="topic">TENNECO - FANUC CNC SYSTEM</div>
        <p>FANUC CNC Controller Integration-Code & M-Code Programming, Simulation & Testing</p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-chart-line"></i>
        </div>
-       <div class="topic">LUCAS-TVS Starter Torque Control Testing Machine
+       <div class="topic">LUCAS-TVS - Starter Torque Control Testing Machine
 </div>
        <p>Precision torque control, real-time data monitoring, robust testing protocols.</p>
      </div>
@@ -144,8 +144,8 @@
          <div class="icon">
            <i class="fab fa-android"></i>
        </div>
-       <div class="topic">Icon Design</div>
-       <p>Coming soon</p>
+       <div class="topic">Saint Gobain - Paper Maker Machine Project</div>
+       <p>High-speed paper production, precise moisture control, automated process monitoring.</p>
      </div>
        <div class="box">
          <div class="icon">
