--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
    <div class="skills-details">
      <div class="text">
       <div class="skills">  <!-- create a div -->
-        <li><h3>PLC Programming: Proficient in Ladder Logic, and Function Block Diagram. Experienced with AB, Siemens, Parker,  Festo, and Fuji PLCs
+        <li><h3>PLC Programming: Proficient in Ladder Logic, and Function Block Diagram. Experienced with AB, Siemens, Parker, Schneider,Rextroth,Mitsubishi,Festo, and Fuji PLCs
 </h3></li>       
         <li>
-          <h3>HMI Development: Experienced in designing HMI applications using FactoryTalk View ,Kimco Tools, Parker PHIware, V-SFTV6.
+          <h3>HMI Development: Experienced in designing HMI applications using FactoryTalk View ,Kico Tools,vijeo Designer, Parker PHIware, V-SFTV6.
 </h3>
         </li>
       
         <li>
-          <h3>VFD: Experience with installing Mitsubishi and Nidec VFDs in various industrial and commercial settings.
+          <h3>VFD: Experience with installing Mitsubishi,Schneider Nidec VFDs in various industrial and commercial settings.
 </h3>
         </li>
       
         <li>
-          <h3>Servo Systems: Proficient in installing, configuring, and troubleshooting servo drives for precise motion control applications. Experienced With Parker(FL20,Compax),AB (Kinetix5100,kinetix300) servos</h3>
+          <h3>Servo Systems: Proficient in installing, configuring, and troubleshooting servo drives for precise motion control applications. Experienced With Parker(FL20,Compax),Rextroth(Indra series), Schneider(LXM32 Series), Siemens (SINAMICS cu320 series) and AB (Kinetix5100,kinetix300) servos</h3>
         </li>
 </h3>
         </li>
@@ -151,8 +151,8 @@
          <div class="icon">
            <i class="fas fa-camera-retro"></i>
        </div>
-       <div class="topic">Photography</div>
-       <p>Coming soon</p>
+       <div class="topic">Kanthal - Wire Resizing Machine Project</div>
+       <p>Automated wire re-sizinging process, precise tension control, and adjustable parameters for different wire gauges</p>
      </div>
        <div class="box">
          <div class="icon">
