--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
          <div class="icon">
            <i class="fas fa-desktop"></i>
        </div>
-       <div class="topic">BEL- Stewart Platform </div>
+       <div class="topic">ISRO and BEL- Stewart Platform </div>
        <p>6 Degrees of Freedom, Inverse Kinematics Implementation, Real-Time Motion Control 
       </p>
      </div>
@@ -158,8 +158,9 @@
          <div class="icon">
            <i class="fas fa-tablet-alt"></i>
        </div>
-       <div class="topic">Apps Devlopment</div>
-       <p>Coming soon</p>
+       <div class="topic">Titan - Pressing Application Machine Project
+</div>
+       <p>pressure control, high-speed operation, adaptable for various materials and thicknesses.</p>
      </div>
    </div>
    </div>
