--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
          <div class="icon">
            <i class="fas fa-tablet-alt"></i>
        </div>
-       <div class="topic">Titan - Pressing Application Machine Project
+       <div class="topic">Titan - Pressing Application Machine
 </div>
-       <p>pressure control, high-speed operation, adaptable for various materials and thicknesses.</p>
+       <p>Pressure control, High-speed operation, adaptable for various materials and thicknesses.</p>
      </div>
    </div>
    </div>
