--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- navgaition menu -->
   <nav>
     <div class="navbar">
-      <div class="logo"><a href="#">Portfolio.</a></div>
+      <div class="logo"><a href="#">Welcome</a></div>
       <ul class="menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -65,7 +65,7 @@
       <div class="topic">OBJECTIVE</div>
       <p>A highly motivated and results-driven PLC Engineer with 2.5 years of experience in designing, programming, and maintaining automated systems across diverse industries. Skilled in troubleshooting and optimizing PLC-based control systems, with proficiency in ladder logic,and various PLC hardware and software. Seeking to leverage my expertise in automation and control systems to contribute to the continuous improvement of industrial processes while enhancing operational efficiency in a dynamic and growth-oriented environment</p>
       <div class="button">
-        <a href="Resume/Fenin B S.pdf" download><button>Download Resume</button></a>
+        <a href="Resume/Manikandan_Resume.pdf" download><button>Download Resume</button></a>
       </div>
     </div>
   </div>
