--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           </div>
       </ul>
       <div class="media-icons">
-        <a href="https://www.linkedin.com/in/fenin/"><i class="fab fa-linkedin"></i></a>
-        <a href="https://instagram.com/feninflash?igshid=ZGUzMzM3NWJiOQ=="><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/fenin/"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/mani-kandan-4777a6207/"><i class="fab fa-linkedin"></i></a>
+       <!-- <a href="https://instagram.com/feninflash?igshid=ZGUzMzM3NWJiOQ=="><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fenin/"><i class="fab fa-twitter"></i></a> -->
       </div>
     </div>
     <div class="menu-btn">
